# Volatix-AI

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  build-plan.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
airflow/: .gitkeep
airflow/dags/: chainguard_eval.py  retraining_pipeline.py  volatix_eval.py
k8s/: .gitkeep  agents-deployment.yaml  classifier-deployment.yaml  deployment.yaml  engine-live-deployment.yaml  keda-scaledobject.yaml  mock-ticker-deployment.yaml  realfeed-deployment.yaml  vector-db.yaml
scripts/: bootstrap-infra.sh  demo-down.sh  demo-up.sh  end-to-end.sh  exploit-ws.py  flood-kafka.sh  init-postgres.sh  inject-features.py  install-airflow.sh  install-keda.sh  mock-ticker.py  set-google-key.sh  set-openai-key.sh  teardown-infra.sh  validate-postgres.sh  validate-vector-db.py
scripts/sql/: init.sql
services/agents/: Dockerfile  __init__.py  consumer.py  graph.py  llm.py  main.py  requirements-dev.txt  requirements.txt  seed_vector_db.py  state.py
services/agents/agents/: auditor.py  enforcer.py  forensic.py
services/agents/eval/: __init__.py  runner.py  scoring.py  storage.py
services/agents/eval/fixtures/: __init__.py  build.py  cases.json
services/agents/tests/: test_graph_routing.py  test_state.py
services/agents/tools/: db.py  rag.py
services/classifier/: Dockerfile  __init__.py  consumer.py  db.py  feature_frame.py  main.py  model.py  requirements-dev.txt  requirements.txt  synthetic.py  trainer.py
services/classifier/scripts/: train_baseline.py
services/classifier/tests/: test_feature_frame.py
services/mock-ticker/: Dockerfile
services/realfeed/: Dockerfile  realfeed.py  requirements.txt
src/: CMakeLists.txt  engine.cpp  engine.hpp  feature_frame.hpp  features.cpp  features.hpp  main.cpp  ring_buffer.hpp  tick_data.hpp  tick_parser.cpp  tick_parser.hpp  ws_client.cpp  ws_client.hpp
web/: .env.example  .gitignore  .gitkeep  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/eval/cases/: route.ts
web/app/api/eval/runs/: route.ts
web/app/api/health/: route.ts
web/app/api/receipt/: route.ts
web/app/api/reports/: route.ts
web/app/api/scores/: route.ts
web/app/api/stream/: route.ts
web/app/eval/: eval-board.tsx  page.tsx
web/components/: industry-context.tsx  ledger-status.tsx  metric-card.tsx  receipt.tsx  replay-modal.tsx  report-inspector.tsx  score-feed.tsx
web/components/ui/: badge.tsx  card.tsx  empty-state.tsx  modal.tsx
web/lib/: db.ts  env.ts  format.ts  replay.ts  sse.ts  timeline.ts  types.ts  use-poll.ts
